# hikcam

./: CMakeLists.txt  README.md  capture.py  cvbind.hpp  hikcam.cpp
Samples/aarch64/Display/: Display
Samples/aarch64/GrabImage_HighPerformance/: GrabImage_HighPerformance
Samples/aarch64/QtCreator/BasicDemo/: MvCamera.cpp  mainwindow.ui
